# ClassesCheck

./: .env.mc.example  .gitignore  CHANGELOG_PRD_MORNING_CLASSES_CHECK.md  HANDOVER.md  PRD_MORNING_CLASSES_CHECK_V1.md  PROJECT_EXECUTION_BLUEPRINT.md  UI_SPEC_GOVTECH_GLASS.md  WORKLOG.md  excel_analysis_report.json  excel_analysis_summary.txt  postgres_mc_isolation.sql  ss01_sample.csv  ss01_sample_utf8_bom.csv
backend/: README.md  alembic.ini  pyproject.toml  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 20260222_0001_initial_mc_tables.py  20260222_0002_create_mc_codes.py  20260222_0003_create_mc_issues.py  20260224_0004_create_mc_publish_and_output_artifacts.py  20260224_0005_add_idempotency_key_to_run.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: __init__.py  config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  codes.py  issues.py  publish.py  run.py  source.py
backend/app/services/: check_service.py  export_service.py  import_service.py  publish_service.py  run_lifecycle.py  run_service.py  schema_guard.py  time_slots.py
backend/app/tools/: __init__.py  acceptance_gate.py  pilot_cutover_report.py  (+4 more)
backend/morning_classes_check_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_check_service_dedupe.py  test_export_pdf_report.py  test_pilot_cutover_report_logic.py  test_rbac_api.py  test_release_with_gate_cleanup.py  test_responsive_gate_logic.py  test_run_lifecycle.py  test_runs_advanced_filters_api.py  test_ui_offline_assets.py
(+24 files in other folders)
